--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@ main { background-color: #ffffff;
             <li><a href="#skills" style="color:#fff">Skills</a></li>
             <li><a href="#projects" style="color:#fff">Projects</a></li>
             <li><a href="#background2" style="color:#fff">Contact</a></li>
-            <li><a href="file:///C:/Users/Prajkta/Desktop/template/Resume.pdf" style="color:#fff">Resume</a></li>	
+            <li><a href="
+https://nifty-sinoussi-8f1519.netlify.com" style="color:#fff">Resume</a></li>	
         </nav>
     </div>
   </div>
