--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-	<title>Prajkta Jagtap</title>
+	<title>Hima Bindu Penumuru</title>
 	<link rel="shortcut icon" href="title.jpg" />
 
 	
@@ -80,7 +80,8 @@ main { background-color: #ffffff;
           <ul class="nav navbar-nav pull-right">
           <li class="active"><a href="about_us.html" style="color:#fff">About</a></li>
             <li><a href="#skills" style="color:#fff">Skills</a></li>
-            <li><a href="#projects" style="color:#fff">Projects</a></li>
+            <li><a href="#projects" style="color:#fff">Projects and Experience</a></li>
+<li><a href="#project" style="color:#fff">Project</a></li>
             <li><a href="#background2" style="color:#fff">Contact</a></li>
             <li><a href="https://infallible-bartik-3d8831.netlify.com" style="color:#fff">Resume</a></li>	
         </nav>
@@ -232,7 +233,19 @@ Verchaska Infotech</li>
 
 
 
+<div class="row"  id="project" >
 
+	<div class="col-md-12 " id="con"  style="padding-top:8.5rem;">
+   
+			<h1 style="">Search Trending Video<h1>
+	<p style="font-size:2.5rem"> Trending videos help people discover new videos they might be interested in. 
+One of the main reasons why I chose to work on this project is because there is a plethora of data available in this dataset. 
+There are a lot of inferences we can be drawn from the views and likes on Trending Videos. 
+This project piques my interest because there are many similar websites and I wish to learn the skills needed to build such an application.
+	</p>
+<div><a href="https://search-trending-videos.prajktajagtap2016.now.sh/">Proposal for Trending Video Search</a></div>
+	</div>
+</div>
 
 
 
