--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-	<title>Hima Bindu Penumuru</title>
+	<title>Prajkta Jagtap</title>
 	<link rel="shortcut icon" href="title.jpg" />
 
 	
@@ -243,7 +243,10 @@ One of the main reasons why I chose to work on this project is because there is 
 There are a lot of inferences we can be drawn from the views and likes on Trending Videos. 
 This project piques my interest because there are many similar websites and I wish to learn the skills needed to build such an application.
 	</p>
-<div><a href="https://search-trending-videos.prajktajagtap2016.now.sh/">Proposal for Trending Video Search</a></div>
+<div><a href="https://search-trending-videos.prajktajagtap2016.now.sh/" style="font-size:2.5rem">Proposal for Trending Video Search</a></div>
+<div class="col-md-4"><img src="trending video.jpg" style=" width:100%; float:left;    "></div>
+<div class="col-md-4"><img src="Trending video search.jpg" style=" width:100%; float:left;    "></div>
+<div class="col-md-4"><img src="trending video search fail.jpg" style=" width:100%; float:left;    "></div>
 	</div>
 </div>
 
