--- a/index.html
+++ b/index.html
@@ -245,8 +245,8 @@ This project piques my interest because there are many similar websites and I wi
 	</p>
 <div><a href="https://search-trending-videos.prajktajagtap2016.now.sh/" style="font-size:2.5rem">Proposal for Trending Video Search</a></div>
 <div class="col-md-4"><img src="trending video.jpg" style=" width:100%; float:left;    "></div>
+<div class="col-md-4"><img src="classifier.png" style=" width:100%; float:left;    "></div>
 <div class="col-md-4"><img src="Trending video search.jpg" style=" width:100%; float:left;    "></div>
-<div class="col-md-4"><img src="trending video search fail.jpg" style=" width:100%; float:left;    "></div>
 	</div>
 </div>
 
