--- a/index.html
+++ b/index.html
@@ -244,9 +244,9 @@ There are a lot of inferences we can be drawn from the views and likes on Trendi
 This project piques my interest because there are many similar websites and I wish to learn the skills needed to build such an application.
 	</p>
 <div><a href="https://search-trending-videos.prajktajagtap2016.now.sh/" style="font-size:2.5rem">Proposal for Trending Video Search</a></div>
-<div class="col-md-4"><img src="trending video.jpg" style=" width:100%; float:left;    "></div>
-<div class="col-md-4"><img src="classifier.png" style=" width:100%; float:left;    "></div>
 <div class="col-md-4"><img src="Trending video search.jpg" style=" width:100%; float:left;    "></div>
+<div class="col-md-4"><img src="classifier.png" style=" width:100%; float:left;    "></div>
+<div class="col-md-4"><img src="image captioning.png" style=" width:100%; float:left;    "></div>
 	</div>
 </div>
 
